2023-04 Feature Update to Version Next

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -40,7 +40,7 @@
 
   <main id="main">
 
-    <!-- ======= Portfolio Details Section ======= -->
+    <!-- ======= Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
@@ -88,7 +88,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Details Section -->
+    </section><!-- End Section -->
 
   </main><!-- End #main -->
 
