--- a/the-problem/identify.html
+++ b/the-problem/identify.html
@@ -68,8 +68,8 @@
         </p>
         <div class="row">
           <div class="col-md-4 portfolio-item filter-id">
-            <a href="../assets/img/prob-sol-img/wf-icons.png" data-gallery="portfolio-gallery"
-              class="glightbox preview-link"><img src="../assets/img/prob-sol-img/wf-icons.png"
+            <a href="../assets/img/prob-sol-img/wf-icons.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/wf-icons.png"
                 class="img-fluid-portfolio" alt=""></a>
             <br><br>
             <div class="portfolio-info">
@@ -98,8 +98,8 @@
 
         <div class="row">
           <div class="col-md-4 portfolio-item filter-id">
-            <a href="../assets/img/prob-sol-img/sign-2.jpg" data-gallery="portfolio-gallery"
-              class="glightbox preview-link"><img src="../assets/img/prob-sol-img/sign-2.jpg"
+            <a href="../assets/img/prob-sol-img/sign-2.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/sign-2.jpg"
                 class="img-fluid-portfolio" alt=""></a>
             <br><br>
             <div class="portfolio-info">
@@ -119,8 +119,8 @@
 
         <div class="row">
           <div class="col-md-4 portfolio-item filter-id">
-            <a href="../assets/img/prob-sol-img/mfl-1.jpg" data-gallery="portfolio-gallery"
-              class="glightbox preview-link"><img src="../assets/img/prob-sol-img/mfl-1.jpg" class="img-fluid-portfolio"
+            <a href="../assets/img/prob-sol-img/mfl-1.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/mfl-1.jpg" class="img-fluid-portfolio"
                 alt=""></a>
             <br><br>
             <div class="portfolio-info">
@@ -132,8 +132,8 @@
 
 
           <div class="col-md-4 portfolio-item filter-id">
-            <a href="../assets/img/prob-sol-img/mfl-2.jpg" data-gallery="portfolio-gallery"
-              class="glightbox preview-link"><img src="../assets/img/prob-sol-img/mfl-2.jpg" class="img-fluid-portfolio"
+            <a href="../assets/img/prob-sol-img/mfl-2.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/mfl-2.jpg" class="img-fluid-portfolio"
                 alt=""></a>
             <br><br>
             <div class="portfolio-info">
@@ -165,8 +165,8 @@
 
         <div class="row">
           <div class="col-md-4 portfolio-item filter-id">
-            <a href="../assets/img/prob-sol-img/1.png" data-gallery="portfolio-gallery"
-              class="glightbox preview-link"><img src="../assets/img/prob-sol-img/1.png" class="img-fluid-portfolio"
+            <a href="../assets/img/prob-sol-img/1.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/1.png" class="img-fluid-portfolio"
                 alt=""></a>
             <br><br>
             <div class="portfolio-info">
@@ -176,8 +176,8 @@
           </div>
 
           <div class="col-md-4 portfolio-item filter-id">
-            <a href="../assets/img/prob-sol-img/gmaps-1.jpg" data-gallery="portfolio-gallery"
-              class="glightbox preview-link"><img src="../assets/img/prob-sol-img/gmaps-1.jpg"
+            <a href="../assets/img/prob-sol-img/gmaps-1.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/gmaps-1.jpg"
                 class="img-fluid-portfolio" alt=""></a>
             <br><br>
             <div class="portfolio-info">
@@ -203,8 +203,8 @@
         </p>
         <div class="row">
           <div class="col-md-4 portfolio-item filter-id">
-            <a href="../assets/img/prob-sol-img/wf-icons2.png" data-gallery="portfolio-gallery"
-              class="glightbox preview-link"><img src="../assets/img/prob-sol-img/wf-icons2.png"
+            <a href="../assets/img/prob-sol-img/wf-icons2.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/wf-icons2.png"
                 class="img-fluid-portfolio" alt=""></a>
             <br><br>
             <div class="portfolio-info">
@@ -264,9 +264,7 @@
             </p>
           </div>
         </div>
-
-
-
+        
       </div>
     </div><!-- End Tab Content 3 -->
 
