2023-04 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
     <nav id="navbar" class="navbar nav-menu">
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#problem" class="nav-link scrollto"><i class='bx bx-question-mark'></i> <span>The Problem</span></a></li>
+        <li><a href="#problem" class="nav-link scrollto"><i class='bx bx-question-mark'></i> <span>The
+              Problem</span></a></li>
         <li><a href="#solution" class="nav-link scrollto"><i class='bx bx-bulb'></i><span>The Solution</span></a>
         </li>
         <li><a href="#about" class="nav-link scrollto"><i class='bx bxs-info-circle'></i><span>About</span></a></li>
         <li><a href="#connect" class="nav-link scrollto"><i class="bx bxs-group"></i><span>Connect</span></a></li>
+        <li><a href="https://nurafianzulkifli.github.io/signages-nrfz/ class="nav-link scrollto"><i class='bx bx-arrow-back'></i>
+            <span>Return to Current Look</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -78,8 +81,8 @@
               <div class="portfolio-info">
                 <h4>Context</h4>
                 <div class="portfolio-links">
-                  <a href="the-problem/context.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class='bx bxs-info-circle'></i></a>
+                  <a href="the-problem/context.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class='bx bxs-info-circle'></i></a>
                 </div>
               </div>
             </div>
@@ -104,8 +107,8 @@
               <div class="portfolio-info">
                 <h4>Identify</h4>
                 <div class="portfolio-links">
-                  <a href="the-problem/identify.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-check"></i></a>
+                  <a href="the-problem/identify.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class="fa-solid fa-circle-check"></i></a>
                 </div>
               </div>
             </div>
@@ -116,7 +119,7 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-        <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Portfolio Section ======= -->
     <section id="solution" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -132,8 +135,8 @@
               <div class="portfolio-info">
                 <h4>Design & Development</h4>
                 <div class="portfolio-links">
-                  <a href="the-solution/des-dev.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
+                  <a href="the-solution/des-dev.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
@@ -146,13 +149,14 @@
                 <h4>Virtual Prototypes</h4>
                 <div class="portfolio-links">
                   <a href="the-solution/virt-proto.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
+                    data-glightbox="type: external" title="Work Details"><i
+                      class="bi bi-arrow-right-circle-fill"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-      </div>
+        </div>
     </section><!-- End Portfolio Section -->
 
 
@@ -197,7 +201,8 @@
 
         <div class="section-title">
           <h2>More about me</h2>
-          <p>View my digital resume! Besides my interest in signages, I also love doing mockups and other designs too! Check them out!</p>
+          <p>View my digital resume! Besides my interest in signages, I also love doing mockups and other designs too!
+            Check them out!</p>
         </div>
 
         <div class="row gy-5">
