2023-05 Feature Update to Version Next

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <h4>Design & Development</h4>
                 <div class="portfolio-links">
                   <a href="the-solution/des-dev.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-arrow-right-circle-fill"></i></a>
+                    title="Work Details"><i class='bx bxs-info-circle'></i></a>
                 </div>
               </div>
             </div>
@@ -149,8 +149,7 @@
                 <h4>Virtual Prototypes</h4>
                 <div class="portfolio-links">
                   <a href="the-solution/virt-proto.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i
-                      class="bi bi-arrow-right-circle-fill"></i></a>
+                    data-glightbox="type: external" title="Work Details"> <i class="fa-solid fa-eye no-hover"></i></a>
                 </div>
               </div>
             </div>
