--- a/the-problem/observations.html
+++ b/the-problem/observations.html
@@ -14,9 +14,7 @@
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
@@ -37,7 +35,7 @@
   <main id="main">
 
     <div class="row row-tpts">
-      <h3 class="summary-tit">Observations</h3>
+      <h3 class="main-tit"><mark class="yellow"><i class="fa-solid fa-eye no-hover"></i> Observations</mark></h3>
       <p class="summary">
         It's paper signages galore!<br><br>
 
@@ -46,11 +44,11 @@
         escalators, one would bring you to the NSL, the middle ones would bring you to the Way Out, and the
         third one, would bring you to Exits 5-7. Many commuters would mistakenly take the middle set of
         escalators, where it only brings you to the Way Out, and not to NSL, because that is where the Faregates
-        are. Hence signages like these <mark class="figure">(Fig. 2)</mark> were placed. While useful, it looks very
+        are. Hence signages like these <mark class="yellow">(Fig. 2)</mark> were placed. While useful, it looks very
         clunky.
 
         <br><br>The worst one was seen at Marina Bay, where
-        the portable signages, showing the NSL/CCL direction <mark class="figure">(Fig. 4)</mark>. The same info can be
+        the portable signages, showing the NSL/CCL direction <mark class="yellow">(Fig. 4)</mark>. The same info can be
         found just by
         looking up, where the permanent signs were!
         Why were the portable signs necessary then?
@@ -63,7 +61,7 @@
         <a href="../assets/img/prob-sol-img/wdl-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><img
             src="../assets/img/prob-sol-img/wdl-1.jpg" class="img-fluid-portfolio" alt=""></a>
         <br><br>
-        <p class="contextImg-caption text-center"><mark class="figure">Fig. 2</mark>: Woodlands TEL's Portable Signs
+        <p class="contextImg-caption text-center"><mark class="yellow">Fig. 2</mark>: Woodlands TEL's Portable Signs
           telling commuters to
           use
           the other set of escalators to NSL.
@@ -75,7 +73,7 @@
         <a href="../assets/img/prob-sol-img/lnt-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><img
             src="../assets/img/prob-sol-img/lnt-1.jpg" class="img-fluid-portfolio" alt=""></a>
         <br><br>
-        <p class="contextImg-caption text-center"><mark class="figure">Fig. 3</mark>: Paper signs showing the Exit
+        <p class="contextImg-caption text-center"><mark class="yellow">Fig. 3</mark>: Paper signs showing the Exit
           Directories
 
         </p>
@@ -86,7 +84,7 @@
             src="../assets/img/prob-sol-img/mrb-1.jpg" class="img-fluid-portfolio" alt=""></a>
         <br><br>
         <div class="portfolio-info">
-          <p class="contextImg-caption text-center"><mark class="figure">Fig. 4</mark>: Marina Bay TEL's Portable Signs
+          <p class="contextImg-caption text-center"><mark class="yellow">Fig. 4</mark>: Marina Bay TEL's Portable Signs
             telling commuters to
             use the other set of escalators to NSL. This is the same problem as the ones in woodlands TEL. <i>The signs
               at this exact position has since been removed, weirdly.</i>
@@ -100,7 +98,7 @@
             src="../assets/img/prob-sol-img/mrb-2.jpg" class="img-fluid-portfolio" alt=""></a>
         <br><br>
         <div class="portfolio-info">
-          <p class="contextImg-caption text-center"><mark class="figure">Fig. 5</mark>: Marina Bay TEL's Portable Signs
+          <p class="contextImg-caption text-center"><mark class="yellow">Fig. 5</mark>: Marina Bay TEL's Portable Signs
             showing commuters
             the
             directions to NSL/CCL.<i>The signs at this exact position has since been removed, weirdly.</i>
