--- a/the-solution/virt-proto.html
+++ b/the-solution/virt-proto.html
@@ -14,9 +14,7 @@
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
@@ -36,9 +34,8 @@
 
   <main id="main">
 
-      <div class="container">
-
         <div class="row row-tpts">
+          <h3 class="main-tit"><mark class="yellow"><i class="fa-solid fa-eye no-hover"></i> Virtual Prototypes</mark></h3>
           <h3 class="summary-tit">Part 1: Wayfinding Iconographies</h3><br><br><br>
 
           <div class="row row-tpts">
@@ -49,7 +46,7 @@
                 class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/proto1.png" class="img-fluid-portfolio"
                   alt=""></a>
               <br><br>
-              <p class="contextImg-caption text-center"><mark class="figure">Fig. 24a</mark>: Reworked signages for Woodlands TEL, middle set of
+              <p class="contextImg-caption text-center"><mark class="yellow">Fig. 24a</mark>: Reworked signages for Woodlands TEL, middle set of
                 escalators
               </p>
               </p>
@@ -60,7 +57,7 @@
                 class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/proto10.png"
                   class="img-fluid-portfolio" alt=""></a>
               <br><br>
-              <p class="contextImg-caption text-center"><mark class="figure">Fig. 24b</mark>: Reworked signages for Marina Bay TEL, middle set of
+              <p class="contextImg-caption text-center"><mark class="yellow">Fig. 24b</mark>: Reworked signages for Marina Bay TEL, middle set of
                 escalators, which leads straiht to TEL's Concourse
               </p>
               </p>
@@ -78,7 +75,7 @@
                 class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/proto2.png"
                 class="img-fluid-portfolio" alt=""></a>
             <br><br>
-            <p class="contextImg-caption text-center"><mark class="figure">Fig. 25</mark>: Reworked signages for existing signages - Dhoby Ghaut
+            <p class="contextImg-caption text-center"><mark class="yellow">Fig. 25</mark>: Reworked signages for existing signages - Dhoby Ghaut
               CCL station
             </p>
             </p>
@@ -102,7 +99,7 @@
                 class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/proto3.png"
                 class="img-fluid-portfolio" alt=""></a>
             <br><br>
-            <p class="contextImg-caption text-center"><mark class="figure">Fig. 26</mark>: Reworked signages for existing Bus Interchange
+            <p class="contextImg-caption text-center"><mark class="yellow">Fig. 26</mark>: Reworked signages for existing Bus Interchange
               signages
               - Yio Chu Kang Bus Interchange.
               <br><b>Photo Credits: <a href="https://landtransportguru.net/yio-chu-kang-bus-interchange/">
@@ -130,7 +127,7 @@
                 class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/proto4.png"
                 class="img-fluid-portfolio" alt=""></a>
             <br><br>
-            <p class="contextImg-caption text-center"><mark class="figure">Fig. 27</mark>: Exit Directory integrated to the Exit sign
+            <p class="contextImg-caption text-center"><mark class="yellow">Fig. 27</mark>: Exit Directory integrated to the Exit sign
               <br><b>Photo Credits: <a href="https://www.facebook.com/groups/sgtrainsbuzz/posts/8800748059950227/">
                   <i class="fa-brands fa-facebook"></i>&nbsp;脇杰倫 via Latest Buzz!!! - SGTrains (Private Group)</a></b>
             </p>
@@ -148,13 +145,13 @@
                 class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/proto7.png"
                 class="img-fluid-portfolio" alt=""></a>
             <br><br>
-            <p class="contextImg-caption text-center"><mark class="figure">Fig. 28</mark>: Exit Directory on Platforms as well
+            <p class="contextImg-caption text-center"><mark class="yellow">Fig. 28</mark>: Exit Directory on Platforms as well
             </p>
           </div>
 
           <div class="col-lg-8 order-2 order-lg-1">
             <p class="summary">
-              To combat the problems in <mark class="figure">Fig. 8 &amp; 9</mark>, I decided to put the Exit Directories on the Platform as well
+              To combat the problems in <mark class="yellow">Fig. 8 &amp; 9</mark>, I decided to put the Exit Directories on the Platform as well
               (where the MRT Map/Locality Map is placed). Users can immediately locate their exits, and the places
               they want to go, right at the platform. Upon tapping out, they would've known where to go already.
           </div>
@@ -172,7 +169,7 @@
                 class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/proto5.png"
                 class="img-fluid-portfolio" alt=""></a>
             <br><br>
-            <p class="contextImg-caption text-center"><mark class="figure">Fig. 29</mark>: Exit Directory integrated to the Exit sign
+            <p class="contextImg-caption text-center"><mark class="yellow">Fig. 29</mark>: Exit Directory integrated to the Exit sign
               <br><b>Photo Credits: <i class="fa-brands fa-discord"></i>&nbsp;poopoo</b>
             </p>
           </div>
@@ -190,7 +187,7 @@
                 class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/proto6.png"
                 class="img-fluid-portfolio" alt=""></a>
             <br><br>
-            <p class="contextImg-caption text-center"><mark class="figure">Fig. 30</mark>: Reworked signages for existing signages - Tampines
+            <p class="contextImg-caption text-center"><mark class="yellow">Fig. 30</mark>: Reworked signages for existing signages - Tampines
               EWL Station <br>
               <b>Photo Credits: <i class="fa-brands fa-discord"></i>&nbsp;Joofer</a></b>
             </p>
@@ -199,7 +196,7 @@
 
           <div class="col-lg-8 order-2 order-lg-1">
             <p class="summary">
-              Similiar to <mark class="figure">Fig. 25</mark>, the proposed design can be used for older signages too. However, one might notice
+              Similiar to <mark class="yellow">Fig. 25</mark>, the proposed design can be used for older signages too. However, one might notice
               that the Landmark names are gone in my proposed design. That is because, my proposed idea was the
               inclusion of Exit Directories at both the Concourse and the Platforms as well. Hence, by the time the
               user taps out from the station, they would've already knew which exits to take.
@@ -213,7 +210,7 @@
                 class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/proto8.png"
                 class="img-fluid-portfolio" alt=""></a>
             <br><br>
-            <p class="contextImg-caption text-center"><mark class="figure">Fig. 31</mark>: Reworked signages for existing signages - Bishan NSL
+            <p class="contextImg-caption text-center"><mark class="yellow">Fig. 31</mark>: Reworked signages for existing signages - Bishan NSL
               Station <br>
               <b>Photo Credits: <i class="fa-solid fa-user"></i>&nbsp; Shahirwan Nur</a></b>
             </p>
@@ -234,7 +231,7 @@
                 class="portfolio-lightbox"><img src="../assets/img/prob-sol-img/proto9.png"
                 class="img-fluid-portfolio" alt=""></a>
             <br><br>
-            <p class="contextImg-caption text-center"><mark class="figure">Fig. 32</mark>: Reworked signages for existing signages - Marina Bay
+            <p class="contextImg-caption text-center"><mark class="yellow">Fig. 32</mark>: Reworked signages for existing signages - Marina Bay
               CCL, showing the different landmarks for each CCL<i>e</i> stations <br>
               <b>Photo Credits: <i class="fa-brands fa-discord"></i>&nbsp;miyazawa </a></b>
             </p>
@@ -250,7 +247,7 @@
 
         </div>
 
-      </div>
+
 
   </main><!-- End #main -->
 
