--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
               <div class="portfolio-info">
                 <h4>Context</h4>
                 <div class="portfolio-links">
-                  <a href="the-problem/context.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class='bx bxs-info-circle'></i></a>
+                  <a href="the-problem/context.html" title="Work Details"><i class='bx bxs-info-circle'></i></a>
                 </div>
               </div>
             </div>
@@ -92,8 +91,7 @@
               <div class="portfolio-info">
                 <h4>Observations</h4>
                 <div class="portfolio-links">
-                  <a href="the-problem/observations.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-eye no-hover"></i></a>
+                  <a href="the-problem/observations.html" title="Work Details"><i class="fa-solid fa-eye no-hover"></i></a>
                 </div>
               </div>
             </div>
@@ -105,8 +103,7 @@
               <div class="portfolio-info">
                 <h4>Identify</h4>
                 <div class="portfolio-links">
-                  <a href="the-problem/identify.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="fa-solid fa-circle-check"></i></a>
+                  <a href="the-problem/identify.html" title="Work Details"><i class="fa-solid fa-circle-check"></i></a>
                 </div>
               </div>
             </div>
@@ -133,8 +130,7 @@
               <div class="portfolio-info">
                 <h4>Design & Development</h4>
                 <div class="portfolio-links">
-                  <a href="the-solution/des-dev.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class='bx bxs-info-circle'></i></a>
+                  <a href="the-solution/des-dev.html" title="Work Details"><i class='bx bxs-info-circle'></i></a>
                 </div>
               </div>
             </div>
@@ -146,8 +142,7 @@
               <div class="portfolio-info">
                 <h4>Virtual Prototypes</h4>
                 <div class="portfolio-links">
-                  <a href="the-solution/virt-proto.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Work Details"> <i class="fa-solid fa-eye no-hover"></i></a>
+                  <a href="the-solution/virt-proto.html" title="Work Details"> <i class="fa-solid fa-eye no-hover"></i></a>
                 </div>
               </div>
             </div>
