--- a/the-problem/context.html
+++ b/the-problem/context.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Bus Replications</title>
+  <title>Context | NRFZ</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -35,7 +35,7 @@
   <main id="main">
 
       <div class="row row-tpts" data-aos="fade-up" data-aos-delay="200">
-      <p class="return-to"><a href="/"><i class="fa-solid fa-arrow-left"></i> Return to Main Page</a></p>
+      <p class="return-to"><a href="../index.html"><i class="fa-solid fa-arrow-left"></i> Return to Main Page</a></p>
       <h3 class="main-tit"><mark class="yellow"><i class='bx bxs-info-circle'></i> Context</mark></h3>
         <p class="summary">
           The idea all started with the launch of the new Wayfinding system on the Thomson-East Coast Line
@@ -67,10 +67,21 @@
 
   </main><!-- End #main -->
 
-  <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+ <!-- ======= Footer ======= -->
+ <footer id="footer">
+  <div class="container">
+    <div class="copyright">
+      &copy; Copyright <strong><span>2023</span></strong>. All Rights Reserved.
+    </div>
+    <div class="modified">
+      Last Modified: May 2023
+    </div>
+  </div>
+</footer><!-- End Footer -->
 
+<div id="preloader"></div>
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+    class="bi bi-arrow-up-short"></i></a>
   <!-- Vendor JS Files -->
   <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="../assets/vendor/aos/aos.js"></script>
