2023-06 Cumulative Update (2.1.XX)

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <div class="portfolio-info">
                 <h4>Context</h4>
                 <div class="portfolio-links">
-                  <a href="the-problem/context.html" title="Work Details"><i class='bx bxs-info-circle'></i></a>
+                  <a href="the-problem/context.html" title="View Section"><i class='bx bxs-info-circle'></i></a>
                 </div>
               </div>
             </div>
@@ -91,7 +91,7 @@
               <div class="portfolio-info">
                 <h4>Observations</h4>
                 <div class="portfolio-links">
-                  <a href="the-problem/observations.html" title="Work Details"><i class="fa-solid fa-eye no-hover"></i></a>
+                  <a href="the-problem/observations.html" title="View Section"><i class="fa-solid fa-eye no-hover"></i></a>
                 </div>
               </div>
             </div>
@@ -103,7 +103,7 @@
               <div class="portfolio-info">
                 <h4>Identify</h4>
                 <div class="portfolio-links">
-                  <a href="the-problem/identify.html" title="Work Details"><i class="fa-solid fa-circle-check"></i></a>
+                  <a href="the-problem/identify.html" title="View Section"><i class="fa-solid fa-circle-check"></i></a>
                 </div>
               </div>
             </div>
@@ -130,7 +130,7 @@
               <div class="portfolio-info">
                 <h4>Design & Development</h4>
                 <div class="portfolio-links">
-                  <a href="the-solution/des-dev.html" title="Work Details"><i class='bx bxs-info-circle'></i></a>
+                  <a href="the-solution/des-dev.html" title="View Section"><i class='bx bxs-info-circle'></i></a>
                 </div>
               </div>
             </div>
@@ -140,9 +140,21 @@
             <div class="portfolio-wrap">
               <img src="assets/img/the-solution/virtM.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Virtual Prototypes</h4>
+                <h4>Prototypes - The ThoughtProcess</h4>
                 <div class="portfolio-links">
-                  <a href="the-solution/virt-proto.html" title="Work Details"> <i class="fa-solid fa-eye no-hover"></i></a>
+                  <a href="the-solution/virt-proto.html" title="View Section"> <i class="fa-solid fa-eye no-hover"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="portfolio-wrap">
+              <img src="assets/img/the-solution/virtM.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Prototypes Gallery</h4>
+                <div class="portfolio-links">
+                  <a href="the-solution/proto-gallery.html" title="View Section"> <i class="fa-solid fa-eye no-hover"></i></a>
                 </div>
               </div>
             </div>
