--- a/index copy.html
+++ b/index copy.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -56,30 +56,16 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
-
-    <div id="centered-container" data-aos="fade-up">
-      <div id="profile-picture"></div>
-      <span id="title">Nurafian Zulkifli</span>
-      <span id="position">Aspiring UI/UX Designer &amp; Web Developer.</span>
-      <div id="media">
-          <a href="https://github.com/michalleptuch" target="_blank" class="media_link" title="GitHub">
-              <div class="fa-brands fa-x-twitter" style="font-size: 32px"></div>
-          </a>
-          <a href="https://www.linkedin.com/in/michalleptuch" target="_blank" class="media_link" title="LinkedIn">
-              <div class="fa-brands fa-facebook" style="font-size: 32px"></div>
-          </a>
-          <a href="https://twitter.com/michalleptuch" target="_blank" class="media_link" title="Twitter">
-              <div class="fa-brands fa-instagram" style="font-size: 32px"></div>
-          </a>
-          <a href="https://apps.microsoft.com/store/search?hl=en-us&gl=en&publisher=Micha%C5%82%20%C5%81eptuch" target="_blank" class="media_link" title="Microsoft Store">
-              <div class="fa-brands fa-linkedin" style="font-size: 32px"></div>
-          </a>
-          <a href="mailto:michal@leptuch.com" class="media_link" title="Contact me">
-              <div class="fa-solid fa-envelope-open" style="font-size: 32px"></div>
-          </a>
+    <div class="container" data-aos="zoom-in" data-aos-delay="100">
+      <p><span class="typed" data-typed-items="Hello! My name is, Hello! Nama Saya"></span></p>
+      <h1>Nurafian Zulkifli</h1>
+      <div class="social-links">
+        <a href="https://twitter.com/_nrf_z" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/Nrfnzlkf/" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/nrfz._/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/nurafian-zulkifli/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
-  </div>
-
+    </div>
   </section><!-- End Hero -->
 
   <main id="main">
@@ -95,9 +81,9 @@
         </div>
 
         <div class="row">
-          <!-- <div class="col-lg-4 pt-4-img">
+          <div class="col-lg-4 pt-4-img">
             <img src="assets/img/about.png" class="img-fluid about-img center-block" alt="">
-          </div> -->
+          </div>
           <div class="col-lg-8 pt-4  content">
             <h3>Aspiring UI/UX Designer &amp; Web Developer.</h3>
             <p class="fst-italic">
