Feature Update for Version Next

--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
       <span id="title">Nurafian Zulkifli</span>
       <span id="position">Aspiring UI/UX Designer &amp; Web Developer.</span>
       <div id="media">
-          <a href="https://github.com/michalleptuch" target="_blank" class="media_link" title="GitHub">
+          <a href="https://twitter.com/_nrf_z" target="_blank" class="media_link" title="GitHub">
               <div class="fa-brands fa-x-twitter" style="font-size: 32px"></div>
           </a>
-          <a href="https://www.linkedin.com/in/michalleptuch" target="_blank" class="media_link" title="LinkedIn">
+          <a href="https://www.facebook.com/Nrfnzlkf/" target="_blank" class="media_link" title="LinkedIn">
               <div class="fa-brands fa-facebook" style="font-size: 32px"></div>
           </a>
-          <a href="https://twitter.com/michalleptuch" target="_blank" class="media_link" title="Twitter">
+          <a href="https://www.instagram.com/nrfz._/" target="_blank" class="media_link" title="Twitter">
               <div class="fa-brands fa-instagram" style="font-size: 32px"></div>
           </a>
-          <a href="https://apps.microsoft.com/store/search?hl=en-us&gl=en&publisher=Micha%C5%82%20%C5%81eptuch" target="_blank" class="media_link" title="Microsoft Store">
+          <a href="https://www.linkedin.com/in/nurafian-zulkifli/" target="_blank" class="media_link" title="Microsoft Store">
               <div class="fa-brands fa-linkedin" style="font-size: 32px"></div>
           </a>
-          <a href="mailto:michal@leptuch.com" class="media_link" title="Contact me">
+          <a href="mailto:nurafian.bz33@gmail.com" class="media_link" title="Contact me">
               <div class="fa-solid fa-envelope-open" style="font-size: 32px"></div>
           </a>
       </div>
