Feature Update for Version Next

--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -44,11 +44,11 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="https://i.imgur.com/s2D8juk.png" alt="">
+                                    <img src="https://i.imgur.com/3Q3DFDx.png" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="https://i.imgur.com/6ZsbhKo.png" alt="">
+                                    <img src="https://i.imgur.com/tC9Mb2p.png" alt="">
                                 </div>
 
                             </div>
