--- a/worksbynrfz/lta-pids.html
+++ b/worksbynrfz/lta-pids.html
@@ -44,11 +44,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/795QJZl.png" alt="">
+                  <img src="https://i.imgur.com/hxIJFLu.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/d4kGGWd.png" alt="">
+                  <img src="https://i.imgur.com/CNiiiS0.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
