--- a/worksbynrfz/mrt-signage-rep-s2.html
+++ b/worksbynrfz/mrt-signage-rep-s2.html
@@ -44,19 +44,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/0Ekr0nw.png" alt="">
+                  <img src="https://i.imgur.com/V2iF8BK.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/2P9DDLD.png" alt="">
+                  <img src="https://i.imgur.com/5cC8V9r.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/ekAv4r7.png" alt="">
+                  <img src="https://i.imgur.com/6FDrqro.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/zjG3SMb.png" alt="">
+                  <img src="https://i.imgur.com/VOHDp2k.png" alt="">
                 </div>
 
               </div>
