Feature Update for Version Next

--- a/worksbynrfz/more-rep.html
+++ b/worksbynrfz/more-rep.html
@@ -44,19 +44,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/vVXTrdM.png" alt="">
+                  <img src="https://i.imgur.com/pgtDCRM.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/OysuYYZ.png" alt="">
+                  <img src="https://i.imgur.com/B7bODFI.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/jLUGyMR.png" alt="">
+                  <img src="https://i.imgur.com/V1lzQml.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/3c9InJu.png" alt="">
+                  <img src="https://i.imgur.com/uKeCAMl.png" alt="">
                 </div>
 
               </div>
