--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div id="centered-container" data-aos="fade-up">
       <div id="profile-picture"></div>
       <span id="title">Nurafian Zulkifli</span>
-      <span id="position">Aspiring UI/UX Designer &amp; Web Developer</span>
+      <span id="position">An Aspiring UI/UX Designer &amp; Web Developer</span>
       <div id="media">
         <a href="https://github.com/nurafianZulkifli" target="_blank" class="media_link" title="GitHub">
           <div class="fa-brands fa-github" style="font-size: 32px"></div>
@@ -98,31 +98,31 @@
 
         <div class="row g-2" data-aos-delay="200">
 
-          <div class="about-item col-lg-4 col-md-4" data-aos="zoom-in">
+          <div class="about-item col-lg-3 col-md-3" data-aos="zoom-in">
             <div class="service-item">
               <div class="details position-relative">
                 <div class="icon">
                   <i class="fa-solid fa-person-military-rifle"></i>
                 </div>
-                <h3>Currently serving the nation.</h3>
+                <h3>Currently serving the nation</h3>
                 <p>Supply Assistant (GE) - SAF</p>
               </div>
             </div>
           </div><!-- End Service Item -->
 
-          <div class="about-item col" data-aos="zoom-in">
+          <div class="about-item col-lg-3 col-md-3" data-aos="zoom-in">
             <div class="service-item">
               <div class="details position-relative">
                 <div class="icon">
                   <i class="fa-solid fa-cake-candles"></i>
                 </div>
                 <h3>Birthday</h3>
-                <p>04 Mar 2000</p>
+                <p>04 March 2000</p>
               </div>
             </div>
           </div><!-- End Service Item -->
 
-          <div class="about-item col" data-aos="zoom-in">
+          <div class="about-item col-lg-3 col-md-3" data-aos="zoom-in">
             <div class="service-item">
               <div class="details position-relative">
                 <div class="icon">
@@ -134,7 +134,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="about-item col" data-aos="zoom-in">
+          <div class="about-item col-lg-3 col-md-3" data-aos="zoom-in">
             <div class="service-item">
               <div class="details position-relative">
                 <div class="icon">
@@ -475,12 +475,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/wXn720I.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/Ks81VPH.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>More Replications</h4>
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
-                  <a href="https://i.imgur.com/wXn720I.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  <a href="https://i.imgur.com/Ks81VPH.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="More Replications"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/more-rep.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
@@ -523,12 +523,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/uYfevZF.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/ojpKcMf.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>MAN A22 Lion Mascot Replication</h4>
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
-                  <a href="https://i.imgur.com/uYfevZF.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  <a href="https://i.imgur.com/ojpKcMf.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MAN A22 Lion Mascot Replication"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/man-a22-masc.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
