--- a/worksbynrfz/man-a22-masc.html
+++ b/worksbynrfz/man-a22-masc.html
@@ -44,7 +44,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/uYfevZF.png" alt="">
+                  <img src="https://i.imgur.com/ojpKcMf.png" alt="">
                 </div>
 
               </div>
