Feature Update for Version Next

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="icon">
                   <i class="fa-solid fa-person-military-rifle"></i>
                 </div>
-                <h3>Currently serving the nation</h3>
+                <h3>Full-Time NSF</h3>
                 <p>Supply Assistant (GE) - SAF</p>
               </div>
             </div>
